[MacViews] Fix Menu Scroll Issues

The menu widgets rely on CocoaMouseCapture to capture
mouse events and then BridgedContentView to process and
forward them. However, CocoaMouseCapture also captures
scroll events and BridgedContentView has been incorrectly
forwarding them to -mouseEvent:. This CL fix the issue
by making BridgedContentView send the event to
-scrollWheel: if the NSEvent type is NSScrollWheel.

Bug: 841786
Change-Id: I033a372b50781501ff046dad2b36932c800ef4b2
Reviewed-on: https://chromium-review.googlesource.com/1077767
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563316}
Former-commit-id: 14878634d038ef4d351d1a6fa26bf08c1e1386d0